-game over kontrolleri. -pes et kontorlü -özel saldırı ve normal saldırı. -ilk yardım kontrolü. -css düzenlemesi.

--- a/css/app.css
+++ b/css/app.css
@@ -1,13 +1,19 @@
+
 .text-center {
     text-align: center;
 }
 
 .healthbar {
-    width: 80%;
     height: 40px;
     background-color: #eee;
     margin: auto;
     transition: width 500ms;
+}
+
+.health-text{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .controls, .log {
